Prevent word-breaks in navigation links

--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -3,7 +3,12 @@
   --vertical-margin: 1em;
   margin-bottom: var(--vertical-margin);
   margin-top: var(--vertical-margin);
+  overflow: hidden;
   padding-left: var(--horizontal-padding);
   padding-right: var(--horizontal-padding);
   text-align: center;
+}
+
+.navigation > a {
+  white-space: nowrap;
 }
